Closed Bug 1631067 Opened 6 years ago Closed 6 years ago

Fixes a typo of Pico Neo 2 controller profile name

Categories

(Core :: WebVR, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox77 --- fixed

People

(Reporter: daoshengmu, Assigned: daoshengmu)

Details

Attachments

(1 file)

Replacing pico-neco-v2 with pico-neo-v2.

Assignee: nobody → dmu
Priority: -- → P2
Pushed by dmu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3dc9fb637166 Fixes a typo of Pico Neo 2 controller profile name. r=kip
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: