Bug 1631067 - Fixes a typo of Pico Neo 2 controller profile name. r=kip

Differential Revision: https://phabricator.services.mozilla.com/D71391